--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "resample",
+  "name": "Resample",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.1-alpha.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -25,7 +25,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "tauri-plugin-python-api": "^0.3.4"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
