--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "resample"
-version = "0.1.0"
+version = "0.0.1-alpha.1"
 description = "A Tauri App"
 authors = ["you"]
 edition = "2021"
@@ -20,6 +20,8 @@ tauri-build = { version = "2", features = [] }
 [dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
+rfd = "0.15"
+dirs = "5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-python = "0.3.6"
