--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -24,5 +24,8 @@ rfd = "0.15"
 dirs = "5"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-python = "0.3.6"
+tokio = { version = "1", features = ["process"] }
+which = "6"
+reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
+chrono = { version = "0.4", features = ["clock"] }
 
